Improve UI, hire a AI data analyst and AI bigquery analyst, and improve prompts

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -99,3 +99,13 @@ pre {
   font-size: 20px;
   margin: 0;
 }
+
+.feedback-message {
+  position: fixed;
+  bottom: 110px;
+  z-index: 1;
+}
+
+.stats-for-nerds-modal code {
+  color: white;
+}
