--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,52 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
 * {
   font-family: "Nunito", sans-serif;
   font-size: 16px;
 }
 
-#chat-content ul,
-#chat-content ol {
-  margin: 0;
-  padding: 0;
-}
-
-#chat-content :not(.sql-node) ul > li:not(.sql-node li),
-#chat-content :not(.sql-node) ol > li:not(.sql-node li) {
-  background-color: #fff;
-  border-color: #88889a;
-  color: #6b6c7e;
-  margin: 10px 0;
-  padding: 10px;
-  font-weight: 600;
-  border-style: solid;
-  border-width: 0.0625rem;
-  list-style: none;
-  border-radius: 4px;
-}
-
-#chat-content :not(.sql-node) ul > li:not(.sql-node li):hover,
-#chat-content :not(.sql-node) ol > li:not(.sql-node li):hover {
-  cursor: pointer;
-  background-color: #f7f8f9;
-  border-color: #88889a;
-  color: #272833;
-}
-
 .thumbnail {
-  width: 32px;
+  min-width: 32px;
   height: 32px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translate(-42px, -6px);
   background-color: #dbdbdb;
   color: #fff;
   font-size: 16px;
   font-weight: 600;
-  position: absolute;
-  left: 0;
-  top: 0;
+  margin-right: 10px;
+  transform: translate(0px, -4px);
+}
+
+.box {
+  position: relative;
+}
+
+.box.user-box {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.box.user-box,
+.box.ai-box {
+  margin-bottom: 30px;
+}
+
+.box .ai-options,
+.box .edit-message {
+  visibility: hidden;
+}
+
+.box:hover .ai-options,
+.box:hover .edit-message,
+.box:last-child .ai-options {
+  visibility: visible !important;
+}
+
+.box.user-box .message {
+  background: #ebebeb;
+  padding: 10px 20px;
+  border-radius: 50px;
 }
 
 pre {
@@ -54,71 +57,64 @@ pre {
 }
 
 .chatbot {
-  left: 0;
+  height: calc(100vh - 180px);
   position: fixed;
-  overflow-x: auto;
-  height: calc(100% - 150px);
-  width: calc(100% - 500px);
+  margin: auto;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  padding: 60px 0;
+}
+
+.chatbot-content {
+  width: 800px;
+  margin: auto;
 }
 
 .prompt-input {
+  width: 800px;
+  margin: auto;
+  padding: 30px 0;
   position: fixed;
   bottom: 0;
   left: 0;
-  background: white;
-  padding: 50px;
-  width: calc(100% - 500px);
-}
-
-.setup {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.sidebar {
-  width: 500px;
-  position: fixed;
-  height: 100%;
   right: 0;
-  z-index: 2;
-}
-
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: white;
-  z-index: 1;
-  padding: 20px 30px;
-  width: 100%;
-}
-
-.header h1 {
-  font-size: 20px;
-  margin: 0;
 }
 
 .feedback-message {
+  width: 800px;
+  margin: auto;
+  padding: 15px 0;
   position: fixed;
-  bottom: 110px;
-  z-index: 1;
+  bottom: 70px;
+  left: 0;
+  right: 0;
+}
+
+.header {
+  padding: 15px 30px;
+  background: white;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header h1 {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 420px;
+}
+
+.table-schema {
+  height: calc(100vh - 450px);
 }
 
 .stats-for-nerds-modal code {
   color: white;
-}
-
-.panel.sheet {
-  border-color: transparent;
-  transition: border-color ease-in-out 0.2s;
-}
-
-.panel.sheet:hover {
-  border-color: #f0f0f0;
-}
-
-.panel.sheet::after {
-  content: none;
 }
